--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,17 +1,15 @@
 FROM ubuntu:15.10
 MAINTAINER "Greg Way" <gregway@mail.med.upenn.edu>
 
-###################
 # Install Ubuntu dependencies
-###################
 RUN apt-get update && apt-get install -y --no-install-recommends \
 		git \
-                ed \		
+        ed \		
 		less \
 		locales \
 		vim-tiny \
 		wget \
-                ca-certificates \
+        ca-certificates \
 		bison \
 		flex \
 		apt-utils \
@@ -20,9 +18,7 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
 		libxml2-dev\
 		libssl-dev
 
-###################
 # Install R
-###################
 RUN apt-get install -y --no-install-recommends \
 		r-base \
 		r-base-dev \
@@ -30,9 +26,7 @@ RUN apt-get install -y --no-install-recommends \
 		r-cran-xml \
 		r-cran-rjava
 
-####################
 # Install Sleipnir
-####################
 RUN apt-get install -y --no-install-recommends \
 		mercurial \
 		gengetopt \
@@ -51,15 +45,14 @@ RUN hg clone https://bitbucket.org/libsleipnir/sleipnir
 RUN cd sleipnir && ./gen_auto && ./gen_tools_am
 RUN cd sleipnir && ./configure --with-svm-perf=~/svmperf/ && make && make install
 
-####################
 # Install hgsc_subtypes
-####################
-##### NOTE - Follow these steps to break cache download following git update
+# NOTE - Follow these steps to break cache download following git update
 # Because we must allow for the updating of the repository, break this cache
 # if the commit ID is different. Run in command line before building image
 # export CACHEBUST=`git rev-parse HEAD`
 # docker build -t gregway/hgsc_subtypes --build-arg CACHEBUST=$CACHEBUST .
 # ARG CACHEBUST=1
+
 # Install git repository
 RUN git clone https://github.com/greenelab/hgsc_subtypes.git
 
@@ -67,15 +60,4 @@ RUN git clone https://github.com/greenelab/hgsc_subtypes.git
 RUN wget -nv https://bitbucket.org/gwaygenomics/download/raw/\
 575d017054fb27a6a0cd62102f86c0ca13bc32a2/ovca/curatedOvarianData_1.8.0.tar.gz
 RUN tar -xf curatedOvarianData_1.8.0.tar.gz
-
-# Run Install Script (for CRAN libraries)
-RUN Rscript hgsc_subtypes/INSTALL.R
-
-
-
-
-
-
-
-
 
