--- a/environment.yml
+++ b/environment.yml
@@ -3,20 +3,40 @@ channels:
 - r
 - bioconda
 dependencies:
-- r-checkpoint=0.4.0
-- r-wgcna=1.51
-- bioconductor-curatedovariandata=1.14.0
-- bioconductor-affy=1.50.0
-- bioconductor-biobase=2.34.0
-- bioconductor-biomart=2.28.0
-- bioconductor-sva=3.20.0
-- bioconductor-impute=1.46.0
-- bioconductor-siggenes=1.44.0
-- bioconductor-limma=3.28.2
-- bioconductor-annotationdbi=1.38.0
-- bioconductor-go.db=3.4.0
-- bioconductor-preprocesscore=1.34.0
-- bioconductor-biocparallel=1.6.6
-- bioconductor-geoquery=2.38.4
-- bioconductor-doppelgangr=1.4.1
-- bioconductor-gsva=1.24.1
+- r::r-base=3.3.2
+- r::r-cluster=2.0.5
+- r::r-curl=2.3
+- r::r-devtools=1.12.0
+- r::r-ggplot2=2.2.0
+- r::r-gplots=3.0.1
+- r::r-gridextra=2.2.1
+- r::r-mnormt=1.5_5
+- r::r-nmf=0.20.6
+- r::r-plyr=1.8.4
+- r::r-proto=1.0.0
+- r::r-scales=0.4.1
+- r::r-stringr=1.1.0
+- r::r-survival=2.40_1
+- r::r-reshape2=1.4.2
+- r::r-reshape=0.8.6
+- bioconda::r-checkpoint=0.4.0
+- bioconda::r-ggally=1.3.0
+- bioconda::r-optparse=1.3.2
+- bioconda::r-outliers=0.14
+- bioconda::r-venndiagram=1.6.16
+- bioconda::r-wgcna=1.51
+- bioconda::bioconductor-affy=1.50.0
+- bioconda::bioconductor-annotationdbi=1.38.0
+- bioconda::bioconductor-biobase=2.34.0
+- bioconda::bioconductor-biocparallel=1.6.6
+- bioconda::bioconductor-biomart=2.28.0
+- bioconda::bioconductor-curatedovariandata=1.14.0
+- bioconda::bioconductor-doppelgangr=1.4.1
+- bioconda::bioconductor-geoquery=2.38.4
+- bioconda::bioconductor-go.db=3.4.0
+- bioconda::bioconductor-gsva=1.24.1
+- bioconda::bioconductor-impute=1.46.0
+- bioconda::bioconductor-limma=3.28.2
+- bioconda::bioconductor-preprocesscore=1.34.0
+- bioconda::bioconductor-siggenes=1.46.0
+- bioconda::bioconductor-sva=3.20.0
