downgrading R environment for mac compatibility

--- a/environment.yml
+++ b/environment.yml
@@ -3,22 +3,22 @@ channels:
 - r
 - bioconda
 dependencies:
-- r::r-base=3.3.2
-- r::r-cluster=2.0.5
-- r::r-curl=2.3
-- r::r-devtools=1.12.0
+- r::r-base=3.3.1
+- r::r-cluster=2.0.4
+- r::r-curl=0.9.7
+- r::r-devtools=1.11.1
 - r::r-ggplot2=2.2.0
 - r::r-gplots=3.0.1
 - r::r-gridextra=2.2.1
-- r::r-mnormt=1.5_5
+- r::r-mnormt=1.5_4
 - r::r-nmf=0.20.6
 - r::r-plyr=1.8.4
-- r::r-proto=1.0.0
+- r::r-proto=0.3_10
 - r::r-scales=0.4.1
 - r::r-stringr=1.1.0
-- r::r-survival=2.40_1
+- r::r-survival=2.39_4
 - r::r-reshape2=1.4.2
-- r::r-reshape=0.8.6
+- r::r-reshape=0.8.5
 - bioconda::r-checkpoint=0.4.0
 - bioconda::r-ggally=1.3.0
 - bioconda::r-optparse=1.3.2
