--- a/environment.yml
+++ b/environment.yml
@@ -2,34 +2,34 @@ name: hgsc_subtypes
 channels:
 - r
 - bioconda
+- conda-forge
 dependencies:
-- r::r-base=3.3.1
-- r::r-cluster=2.0.4
-- r::r-curl=0.9.7
-- r::r-devtools=1.11.1
+- r::r-base=3.4.1
+- r::r-cluster=2.0.6
+- r::r-curl=3.0
+- r::r-devtools=1.13.3
 - r::r-ggplot2=2.2.0
 - r::r-gplots=3.0.1
 - r::r-gridextra=2.2.1
-- r::r-mnormt=1.5_4
+- r::r-mnormt=1.5_5
 - r::r-nmf=0.20.6
 - r::r-plyr=1.8.4
 - r::r-proto=0.3_10
 - r::r-scales=0.4.1
 - r::r-stringr=1.1.0
-- r::r-survival=2.39_4
+- r::r-survival=2.41_3
 - r::r-reshape2=1.4.2
-- r::r-reshape=0.8.5
-- bioconda::r-checkpoint=0.4.0
-- bioconda::r-ggally=1.3.0
-- bioconda::r-optparse=1.3.2
+- r::r-reshape=0.8.7
+- conda-forge::r-ggally=1.3.2
+- conda-forge::r-optparse=1.4.4
 - bioconda::r-outliers=0.14
-- bioconda::r-venndiagram=1.6.16
+- conda-forge::r-venndiagram=1.6.17
 - bioconda::r-wgcna=1.51
 - bioconda::bioconductor-affy=1.50.0
 - bioconda::bioconductor-annotationdbi=1.38.0
 - bioconda::bioconductor-biobase=2.34.0
-- bioconda::bioconductor-biocparallel=1.6.6
-- bioconda::bioconductor-biomart=2.28.0
+- bioconda::bioconductor-biocparallel=1.10.1
+- bioconda::bioconductor-biomart=2.32.1
 - bioconda::bioconductor-curatedovariandata=1.14.0
 - bioconda::bioconductor-doppelgangr=1.4.1
 - bioconda::bioconductor-geoquery=2.38.4
